// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector AtLeastOneViolationNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violation-card-list-wrapper">
                    <div class="violation-card-list-controls"
                         data-testid="vehicle-violation-card-list-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="true"
                                  class="btn btn-block btn-outline-primary"
                                  type="button"
                          >
                            hide violations
                          </button>
                          <button class="btn btn-block btn-outline-primary"
                                  type="button"
                          >
                            show fines details
                          </button>
                          <button class="btn btn-block btn-outline-primary"
                                  type="button"
                          >
                            show full location
                          </button>
                        </div>
                      </div>
                    </div>
                    <div class="violation-card-list-caption">
                      2 parking and camera violations
                    </div>
                    <div class="violation-card-list-sort-controls">
                      <div class="violation-card-list-sort-control date active"
                           data-testid="violation-card-list-sort-control-date"
                      >
                        <span class="violation-card-list-sort-control-name">
                          Date
                        </span>
                        <svg aria-labelledby="svg-inline--fa-title-angle-down"
                             data-prefix="fas"
                             data-icon="angle-down"
                             class="svg-inline--fa fa-angle-down "
                             role="img"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 448 512"
                        >
                          <title id="svg-inline--fa-title-angle-down">
                            angle-down icon
                          </title>
                          <path fill="currentColor"
                                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                          >
                          </path>
                        </svg>
                      </div>
                      <div class="violation-card-list-sort-control kind "
                           data-testid="violation-card-list-sort-control-kind"
                      >
                        <span class="violation-card-list-sort-control-name">
                          Type
                        </span>
                        <span class="arrow-placeholder">
                        </span>
                      </div>
                      <div class="violation-card-list-sort-control location "
                           data-testid="violation-card-list-sort-control-location"
                      >
                        <span class="violation-card-list-sort-control-name">
                          Borough
                        </span>
                        <span class="arrow-placeholder">
                        </span>
                      </div>
                      <div class="violation-card-list-sort-control fined "
                           data-testid="violation-card-list-sort-control-fined"
                      >
                        <span class="violation-card-list-sort-control-name">
                          Fines
                        </span>
                        <span class="arrow-placeholder">
                        </span>
                      </div>
                    </div>
                    <div class="violation-card-list bg-body"
                         data-testid="violation-card-list"
                    >
                      <div class="violation-card-sort-divider bg-dark"
                           data-testid="sort-divider-date-descending-2021"
                      >
                        <span class="divider-group-name">
                          2021
                        </span>
                        <span class="collapsible-toggle">
                          1 violation [–]
                        </span>
                      </div>
                      <div class="violation-card bg-warning-subtle">
                        <div class="violation-card-row">
                          <div>
                            <a data-bs-toggle="offcanvas"
                               href="#showViolationDetails"
                               role="button"
                               aria-controls="showViolationDetails"
                            >
                              02/17/2021 1:11 PM
                            </a>
                          </div>
                          <div>
                            Staten Island
                          </div>
                        </div>
                        <div class="violation-card-row">
                          <div>
                            School Zone Speed Camera Violation
                          </div>
                          <div>
                            $87.00
                          </div>
                        </div>
                      </div>
                      <div class="violation-card-sort-divider bg-dark"
                           data-testid="sort-divider-date-descending-2018"
                      >
                        <span class="divider-group-name">
                          2018
                        </span>
                        <span class="collapsible-toggle">
                          1 violation [–]
                        </span>
                      </div>
                      <div class="violation-card bg-body-tertiary">
                        <div class="violation-card-row">
                          <div>
                            <a data-bs-toggle="offcanvas"
                               href="#showViolationDetails"
                               role="button"
                               aria-controls="showViolationDetails"
                            >
                              04/26/2018 2:11 PM
                            </a>
                          </div>
                          <div>
                            Brooklyn
                          </div>
                        </div>
                        <div class="violation-card-row">
                          <div>
                            No Standing - Bus Stop
                          </div>
                          <div>
                            N/A
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector AtLeastOneViolationWithFullViolationTextAndFullFinesOldStyleDisplay play-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header"
                         data-testid="vehicle-violations-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="false"
                                  class="btn btn-block w-100 btn-outline-primary"
                                  type="button"
                          >
                            hide violations
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show fines summary
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show violation summary
                          </button>
                        </div>
                      </div>
                    </div>
                    <div class="table-responsive violations-table-body-wrapper"
                         id="violations-table-e5f6g7h8"
                         data-testid="vehicle-violations-list"
                    >
                      <table class="table table-striped table-sm violations-table">
                        <caption>
                          2 parking and camera violations
                        </caption>
                        <thead class="thead-light table-light">
                          <tr>
                            <th data-testid="table-header-date"
                                aria-sort="ascending"
                                class="sort-column"
                            >
                              <span>
                                Date
                              </span>
                              <svg aria-labelledby="svg-inline--fa-title-angle-up"
                                   data-prefix="fas"
                                   data-icon="angle-up"
                                   class="svg-inline--fa fa-angle-up "
                                   role="img"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewbox="0 0 448 512"
                              >
                                <title id="svg-inline--fa-title-angle-up">
                                  angle-up icon
                                </title>
                                <path fill="currentColor"
                                      d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                                >
                                </path>
                              </svg>
                            </th>
                            <th data-testid="table-header-kind"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Violation
                              </span>
                            </th>
                            <th data-testid="table-header-location"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Location
                              </span>
                            </th>
                            <th data-testid="table-header-fined"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Fines
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody data-testid="violations-table-body">
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2018"
                          >
                            <th colspan="1">
                              2018
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row  no-fines-breakdown"
                              data-testid="summons 7310127604"
                          >
                            <td>
                              04/26/2018
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                No Standing - Bus Stop
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Brooklyn
                              </span>
                              <span class="location-description">
                                (8002 3rd Ave)
                              </span>
                            </td>
                            <td class="fines">
                              N/A
                            </td>
                          </tr>
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2021"
                          >
                            <th colspan="1">
                              2021
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row table-warning "
                              data-testid="summons 7310127603"
                          >
                            <td>
                              02/17/2021
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                School Zone Speed Camera Violation
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Staten Island
                              </span>
                              <span class="location-description">
                                (Victory Blvd. @ Eddy St.)
                              </span>
                            </td>
                            <td class="fines">
                              <div class="fines-breakdown">
                                <div class="summary-box keys">
                                  <div>
                                    Initial:
                                  </div>
                                  <div>
                                    Interest:
                                  </div>
                                  <div class="fine-added">
                                    Penalties:
                                  </div>
                                  <div>
                                    Total:
                                  </div>
                                  <div>
                                    Reductions:
                                  </div>
                                  <div class="fine-subtracted">
                                    Paid:
                                  </div>
                                  <div class>
                                    Outstanding:
                                  </div>
                                </div>
                                <div class="summary-box values fines"
                                     role="math"
                                     aria-label="$50.00 fined + $12.69 in interest + $25.00 in penalties - $0.69 reduced - $10.00 paid = $77.00 oustanding"
                                >
                                  <div class="math-symbols">
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div class="fine-added">
                                      +&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div class="fine-subtracted">
                                      –&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                  </div>
                                  <div class="amounts">
                                    <div>
                                      $50.00
                                    </div>
                                    <div>
                                      $12.69
                                    </div>
                                    <div class="fine-added">
                                      $25.00
                                    </div>
                                    <div>
                                      $87.69
                                    </div>
                                    <div>
                                      $0.69
                                    </div>
                                    <div class="fine-subtracted">
                                      $10.00
                                    </div>
                                    <div class>
                                      $77.00
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector AtLeastOneViolationWithFullViolationTextAndSummaryFinesOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header"
                         data-testid="vehicle-violations-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="false"
                                  class="btn btn-block w-100 btn-outline-primary"
                                  type="button"
                          >
                            hide violations
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show fines details
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show violation summary
                          </button>
                        </div>
                      </div>
                    </div>
                    <div class="table-responsive violations-table-body-wrapper"
                         id="violations-table-e5f6g7h8"
                         data-testid="vehicle-violations-list"
                    >
                      <table class="table table-striped table-sm violations-table">
                        <caption>
                          2 parking and camera violations
                        </caption>
                        <thead class="thead-light table-light">
                          <tr>
                            <th data-testid="table-header-date"
                                aria-sort="ascending"
                                class="sort-column"
                            >
                              <span>
                                Date
                              </span>
                              <svg aria-labelledby="svg-inline--fa-title-angle-up"
                                   data-prefix="fas"
                                   data-icon="angle-up"
                                   class="svg-inline--fa fa-angle-up "
                                   role="img"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewbox="0 0 448 512"
                              >
                                <title id="svg-inline--fa-title-angle-up">
                                  angle-up icon
                                </title>
                                <path fill="currentColor"
                                      d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                                >
                                </path>
                              </svg>
                            </th>
                            <th data-testid="table-header-kind"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Violation
                              </span>
                            </th>
                            <th data-testid="table-header-location"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Location
                              </span>
                            </th>
                            <th data-testid="table-header-fined"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Fines
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody data-testid="violations-table-body">
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2018"
                          >
                            <th colspan="1">
                              2018
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row  no-fines-breakdown"
                              data-testid="summons 7310127604"
                          >
                            <td>
                              04/26/2018
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                No Standing - Bus Stop
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Brooklyn
                              </span>
                              <span class="location-description">
                                (8002 3rd Ave)
                              </span>
                            </td>
                            <td class="fines">
                              N/A
                            </td>
                          </tr>
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2021"
                          >
                            <th colspan="1">
                              2021
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row table-warning no-fines-breakdown"
                              data-testid="summons 7310127603"
                          >
                            <td>
                              02/17/2021
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                School Zone Speed Camera Violation
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Staten Island
                              </span>
                              <span class="location-description">
                                (Victory Blvd. @ Eddy St.)
                              </span>
                            </td>
                            <td class="fines">
                              $87.00
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector AtLeastOneViolationWithViolationIconsAndFullFinesOldStyleDisplay play-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header"
                         data-testid="vehicle-violations-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="false"
                                  class="btn btn-block w-100 btn-outline-primary"
                                  type="button"
                          >
                            hide violations
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show fines summary
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show violation summary
                          </button>
                        </div>
                      </div>
                    </div>
                    <div class="table-responsive violations-table-body-wrapper"
                         id="violations-table-e5f6g7h8"
                         data-testid="vehicle-violations-list"
                    >
                      <table class="table table-striped table-sm violations-table">
                        <caption>
                          2 parking and camera violations
                        </caption>
                        <thead class="thead-light table-light">
                          <tr>
                            <th data-testid="table-header-date"
                                aria-sort="ascending"
                                class="sort-column"
                            >
                              <span>
                                Date
                              </span>
                              <svg aria-labelledby="svg-inline--fa-title-angle-up"
                                   data-prefix="fas"
                                   data-icon="angle-up"
                                   class="svg-inline--fa fa-angle-up "
                                   role="img"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewbox="0 0 448 512"
                              >
                                <title id="svg-inline--fa-title-angle-up">
                                  angle-up icon
                                </title>
                                <path fill="currentColor"
                                      d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                                >
                                </path>
                              </svg>
                            </th>
                            <th data-testid="table-header-kind"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Violation
                              </span>
                            </th>
                            <th data-testid="table-header-location"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Location
                              </span>
                            </th>
                            <th data-testid="table-header-fined"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Fines
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody data-testid="violations-table-body">
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2018"
                          >
                            <th colspan="1">
                              2018
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row  no-fines-breakdown"
                              data-testid="summons 7310127604"
                          >
                            <td>
                              04/26/2018
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                No Standing - Bus Stop
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Brooklyn
                              </span>
                              <span class="location-description">
                                (8002 3rd Ave)
                              </span>
                            </td>
                            <td class="fines">
                              N/A
                            </td>
                          </tr>
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2021"
                          >
                            <th colspan="1">
                              2021
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row table-warning "
                              data-testid="summons 7310127603"
                          >
                            <td>
                              02/17/2021
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                School Zone Speed Camera Violation
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Staten Island
                              </span>
                              <span class="location-description">
                                (Victory Blvd. @ Eddy St.)
                              </span>
                            </td>
                            <td class="fines">
                              <div class="fines-breakdown">
                                <div class="summary-box keys">
                                  <div>
                                    Initial:
                                  </div>
                                  <div>
                                    Interest:
                                  </div>
                                  <div class="fine-added">
                                    Penalties:
                                  </div>
                                  <div>
                                    Total:
                                  </div>
                                  <div>
                                    Reductions:
                                  </div>
                                  <div class="fine-subtracted">
                                    Paid:
                                  </div>
                                  <div class>
                                    Outstanding:
                                  </div>
                                </div>
                                <div class="summary-box values fines"
                                     role="math"
                                     aria-label="$50.00 fined + $12.69 in interest + $25.00 in penalties - $0.69 reduced - $10.00 paid = $77.00 oustanding"
                                >
                                  <div class="math-symbols">
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div class="fine-added">
                                      +&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                    <div class="fine-subtracted">
                                      –&nbsp;
                                    </div>
                                    <div>
                                      &nbsp;&nbsp;&nbsp;
                                    </div>
                                  </div>
                                  <div class="amounts">
                                    <div>
                                      $50.00
                                    </div>
                                    <div>
                                      $12.69
                                    </div>
                                    <div class="fine-added">
                                      $25.00
                                    </div>
                                    <div>
                                      $87.69
                                    </div>
                                    <div>
                                      $0.69
                                    </div>
                                    <div class="fine-subtracted">
                                      $10.00
                                    </div>
                                    <div class>
                                      $77.00
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector AtLeastOneViolationWithViolationIconsAndSummaryFinesOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header"
                         data-testid="vehicle-violations-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="false"
                                  class="btn btn-block w-100 btn-outline-primary"
                                  type="button"
                          >
                            hide violations
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show fines details
                          </button>
                          <button class="btn btn-outline-primary btn-block w-100"
                                  type="button"
                          >
                            show violation summary
                          </button>
                        </div>
                      </div>
                    </div>
                    <div class="table-responsive violations-table-body-wrapper"
                         id="violations-table-e5f6g7h8"
                         data-testid="vehicle-violations-list"
                    >
                      <table class="table table-striped table-sm violations-table">
                        <caption>
                          2 parking and camera violations
                        </caption>
                        <thead class="thead-light table-light">
                          <tr>
                            <th data-testid="table-header-date"
                                aria-sort="ascending"
                                class="sort-column"
                            >
                              <span>
                                Date
                              </span>
                              <svg aria-labelledby="svg-inline--fa-title-angle-up"
                                   data-prefix="fas"
                                   data-icon="angle-up"
                                   class="svg-inline--fa fa-angle-up "
                                   role="img"
                                   xmlns="http://www.w3.org/2000/svg"
                                   viewbox="0 0 448 512"
                              >
                                <title id="svg-inline--fa-title-angle-up">
                                  angle-up icon
                                </title>
                                <path fill="currentColor"
                                      d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                                >
                                </path>
                              </svg>
                            </th>
                            <th data-testid="table-header-kind"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Violation
                              </span>
                            </th>
                            <th data-testid="table-header-location"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Location
                              </span>
                            </th>
                            <th data-testid="table-header-fined"
                                aria-sort="none"
                                class
                            >
                              <span>
                                Fines
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody data-testid="violations-table-body">
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2018"
                          >
                            <th colspan="1">
                              2018
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row  no-fines-breakdown"
                              data-testid="summons 7310127604"
                          >
                            <td>
                              04/26/2018
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                No Standing - Bus Stop
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Brooklyn
                              </span>
                              <span class="location-description">
                                (8002 3rd Ave)
                              </span>
                            </td>
                            <td class="fines">
                              N/A
                            </td>
                          </tr>
                          <tr class="sort-divider"
                              data-testid="sort-divider-date-ascending-2021"
                          >
                            <th colspan="1">
                              2021
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                            <th colspan="1">
                            </th>
                          </tr>
                          <tr class="violation-row table-warning no-fines-breakdown"
                              data-testid="summons 7310127603"
                          >
                            <td>
                              02/17/2021
                            </td>
                            <td class="violation-description">
                              <div class="humanized-description">
                                School Zone Speed Camera Violation
                              </div>
                            </td>
                            <td class="location">
                              <span class="borough">
                                Staten Island
                              </span>
                              <span class="location-description">
                                (Victory Blvd. @ Eddy St.)
                              </span>
                            </td>
                            <td class="fines">
                              $87.00
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector NoViolationsNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violation-card-list-wrapper">
                    <div class="violation-card-list-controls"
                         data-testid="vehicle-violation-card-list-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="true"
                                  class="btn btn-block btn-outline-secondary"
                                  disabled
                                  type="button"
                          >
                            no violations
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ViolationsInspector NoViolationsOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="list-group-item">
                  <div class="violations-table-wrapper">
                    <div class="violations-table-header"
                         data-testid="vehicle-violations-controls"
                    >
                      <div class="row">
                        <div class="d-grid gap-2 ">
                          <button aria-controls="violations-table-e5f6g7h8"
                                  aria-expanded="false"
                                  class="btn btn-block w-100 btn-outline-secondary"
                                  disabled
                                  type="button"
                          >
                            no violations
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
